# Cloud-On-Mobile-Core

./: .gitignore  CMakeLists.txt  README.md  main.c
FileManager/: FileManager.c  FileManager.h
TcpClient/: TcpClient.c  TcpClient.h  TcpParser.c  TlsClient.c
